add RabbitMQ sub and pub classes